infra/control-plane/clusters/overlays/staging/kibamail-images-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibamail-web
  namespace: kibamail
spec:
  template:
    spec:
      containers:
        - name: control-plane
          image: ghcr.io/kibamail/kibamail:staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibamail-workers
  namespace: kibamail-workers
spec:
  template:
    spec:
      containers:
        - name: worker
          image: ghcr.io/kibamail/kibamail-worker:staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibamail-tracking
  namespace: kibamail-tracking
spec:
  template:
    spec:
      containers:
        - name: tracking
          image: ghcr.io/kibamail/kibamail-tracking:staging
