infra/control-plane/clusters/overlays/staging/logto-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto
spec:
  template:
    spec:
      containers:
        - name: logto
