infra/control-plane/clusters/overlays/staging/outpost-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outpost-api
spec:
  template:
    spec:
      containers:
        - name: outpost-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outpost-delivery
spec:
  template:
    spec:
      containers:
        - name: outpost-delivery
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outpost-log
spec:
  template:
    spec:
      containers:
        - name: outpost-log
