infra/control-plane/clusters/overlays/staging/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kibamail-gateway
spec:
  listeners:
    - name: http
      protocol: HTTP
      port: 30080
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 30443
      tls:
        mode: Terminate
        certificateRefs:
          - name: kibamail-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-tracking
      protocol: HTTPS
      port: 30443
      hostname: staging.e.kbmta.net
      tls:
        mode: Terminate
        certificateRefs:
          - name: tracking-tls
      allowedRoutes:
        namespaces:
          from: All
