infra/control-plane/clusters/overlays/staging/kibamail-routes-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibamail-control-plane
spec:
  hostnames:
    - staging.kibamail.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /w
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-host
                value: staging.kibamail.com
      backendRefs:
        - name: kibamail-control-plane
          namespace: kibamail-control-plane
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /_kibamail-control-plane
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-host
                value: staging.kibamail.com
      backendRefs:
        - name: kibamail-control-plane
          namespace: kibamail-control-plane
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-host
                value: staging.kibamail.com
      backendRefs:
        - name: kibamail-control-plane
          namespace: kibamail-control-plane
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /healthz
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-host
                value: staging.kibamail.com
      backendRefs:
        - name: kibamail-control-plane
          namespace: kibamail-control-plane
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /p
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-host
                value: staging.kibamail.com
      backendRefs:
        - name: kibamail-control-plane
          namespace: kibamail-control-plane
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /callback
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-host
                value: staging.kibamail.com
      backendRefs:
        - name: kibamail-control-plane
          namespace: kibamail-control-plane
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibamail-marketing
spec:
  hostnames:
    - staging.kibamail.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibamail-api
spec:
  hostnames:
    - api.staging.kibamail.com
